--- a/predictions/templates/predictions/campaign_prediction.html
+++ b/predictions/templates/predictions/campaign_prediction.html
@@ -39,6 +39,12 @@
             {% endfor %}
           {% endif %}
           
+          {% if form.non_field_errors %}
+            <div class="alert alert-danger">
+              {{ form.non_field_errors }}
+            </div>
+          {% endif %}
+          
           <form method="post" class="campaign-form">
             {% csrf_token %}
             
